syntax = "proto3";

package echo;

import "google/protobuf/timestamp.proto";

service EchoService {
  rpc Echo(RequestMessage) returns (ResponseMessage) {}
}

message RequestMessage {
  google.protobuf.Timestamp sent = 1;
  EchoNode source = 2;
  EchoNode target = 3;
  repeated EchoNode nodes = 4;
}

message EchoNode {
  string region = 1;
  string uri = 2;
  string port = 3;
}


message ResponseMessage {
  string id = 1;
  RequestMessage request = 2;
}

